--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "analyze": "cross-env ANALYZE=1 max build",
     "build": "max build",
     "deploy": "npm run build && npm run gh-pages",
-    "dev": "npm run start:dev",
+    "dev": "npm run start:dev --port=8001",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "max setup",
@@ -22,11 +22,11 @@
     "prepare": "husky install",
     "prettier": "prettier -c --write \"src/**/*\"",
     "serve": "umi-serve",
-    "start": "cross-env UMI_ENV=dev max dev",
-    "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev max dev",
-    "start:no-mock": "cross-env MOCK=none UMI_ENV=dev max dev",
-    "start:pre": "cross-env REACT_APP_ENV=pre UMI_ENV=dev max dev",
-    "start:test": "cross-env REACT_APP_ENV=test MOCK=none UMI_ENV=dev max dev",
+    "start": "cross-env max dev",
+    "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none max dev",
+    "start:no-mock": "cross-env MOCK=none max dev",
+    "start:pre": "cross-env REACT_APP_ENV=pre max dev",
+    "start:test": "cross-env REACT_APP_ENV=test MOCK=none max dev",
     "test": "max test",
     "test:component": "max test ./src/components",
     "test:e2e": "node ./tests/run-tests.js",
